tests/single_instruction_translation_validation/mcsema/register-variants-samereg/psadbw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:361:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %15) #22
            ^
0.01user 0.05system 0:00.08elapsed 78%CPU (0avgtext+0avgdata 27644maxresident)k
0inputs+16outputs (0major+3293minor)pagefaults 0swaps
